@@ -1,5 +1,6 @@
 2025-XX-XX   3.2.1:
 -------------------
+  * add double precision floating point number example
 
 
 2025-03-19   3.2.0:
